adjuct video, social no sucess

--- a/404.md
+++ b/404.md
@@ -1,10 +1,11 @@
 ---
 layout: page
-title: 404 ERROR
+title: "Page Not Found"
 comments: true
+excerpt: "Page not found. Your pixels are in another canvas."
 permalink: /404.html
 ---
 
 ## Sorry, you get lost. ##
-
+404 ERROR
 Return to [Homepage](http://boyangli.com)
